llvm/test/tools/llubi/alloca_large_count.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define void @main() {
  %alloc_dyn = alloca i32, i128 -1
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT: Immediate UB detected: Alloca with large array size that overflows uint64_t.
; CHECK-NEXT: error: Execution of function 'main' failed.
